--- a/css/main.css
+++ b/css/main.css
@@ -763,6 +763,14 @@
   color: var(--title-gray-words-color);
 }
 
+.container {
+  width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .backdrop {
   position: fixed;
   top: 0px;
@@ -1025,5 +1033,49 @@
 .close-btn-svg > use {
   position: absolute;
   transform: translate(6px, 6px);
+}
+
+body {
+  background-color: var(--title-light-words-color);
+  font-family: var(--main-font);
+  font-size: 14px;
+  color: var(--title-dark-words-color);
+}
+
+.header-wrapper .link,
+.link-logo {
+  text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+ul,
+h1,
+h2,
+h3 {
+  padding: 0px;
+  margin: 0px;
+}
+
+.link {
+  text-decoration: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+svg {
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list {
+  list-style: none;
+}
+
+:root {
+  --main-font: "Roboto", sans-serif;
+  --secondary-font: "Raleway", sans-serif;
+  --title-dark-words-color: #212121;
+  --title-light-words-color: #ffffff;
+  --title-gray-words-color: #757575;
+  --accent-color: #2196f3;
 }
 /*# sourceMappingURL=main.css.map */
