--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,11 @@
 @import "./layout/footer";
 
 @import "./layout/portfolio";
+@import "./components/_container";
 @import "./components/modal";
+@import "./base/base";
+@import "./utils/_var";
+
 
 
 
