--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -32,7 +32,7 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: var(--title-light-words-color);
+    color: $title-light-words-color;
     /* Цвет текста должен быть белый но пока оставлю по умолчанию*/
   }
   
@@ -51,7 +51,7 @@
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
-    color: var(--title-light-words-color);
-    background-color: var(--accent-color);
+    color: $title-light-words-color;
+    background-color: $accent-color;
   }
   
