--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -38,15 +38,15 @@
   }
   
   .link:hover {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
   
   .link:hover .client-link-svg {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
   
   .client-list-item .link:hover {
-    border: 1px solid var(--accent-color);
+    border: 1px solid $accent-color;
     border-radius: 4px;
   }
   
