--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -33,7 +33,7 @@
     line-height: 1.26;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--title-dark-words-color);
+    color: $title-dark-words-color;
   
     padding-top: 6px;
     padding-bottom: 6px;
@@ -44,8 +44,8 @@
   
   .button:hover,
   .button:focus {
-    color: var(--title-light-words-color);
-    background-color: var(--accent-color);
+    color: $title-light-words-color;
+    background-color: $accent-color;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 3px 1px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
@@ -99,7 +99,7 @@
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
-    color: var(--title-light-words-color);
+    color: $title-light-words-color;
   }
   
   .wrapper-opacity {
@@ -144,7 +144,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: var(--title-dark-words-color);
+    color: $title-dark-words-color;
   }
   
   .text-portfolio {
@@ -157,5 +157,5 @@
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
-    color: var(--title-gray-words-color);
+    color: $title-gray-words-color;
   }
