--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
+@import "./utils/_var";
+@import "./base/base";
+@import "./components/_container";
+@import "./components/modal";
 @import "./layout/header";
 @import "./layout/hero";
 @import "./layout/benefits";
@@ -7,9 +11,6 @@
 @import "./layout/footer";
 
 @import "./layout/portfolio";
-@import "./components/_container";
-@import "./components/modal";
-@import "./base/base";
 @import "./utils/_var";
 
 
