--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,24 +3,20 @@
 .navigation {
     display: flex;
     align-items: center;
-  }
-  
-  .navigation .logo {
-    margin-right: 85px;
-  }
-  
-  .logo {
-    font-family: $secondary-font;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: #000000;
-  }
-  
-  .logo-color {
-    color: $accent-color;
+
+    .logo {
+      margin-right: 85px;
+      font-family: $secondary-font;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 26px;
+      line-height: 1.19;
+      letter-spacing: 0.03em;
+      color: #000000;
+    }
+    .logo-color {
+      color: $accent-color;
+    }
   }
   
   /* Меню*/
@@ -86,19 +82,11 @@
     margin-right: 10px;
   }
   
-  .header-adress-link:hover .header-adress-mail-svg {
-    fill: $accent-color;
-  }
-  
   .header-adress-tel-svg {
     width: 10px;
     height: 15px;
     fill: $title-gray-words-color;
     margin-right: 10px;
-  }
-  
-  .header-adress-link:hover .header-adress-tel-svg {
-    fill: $accent-color;
   }
   
   .header-adress-list:not(:last-child) {
@@ -113,5 +101,13 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: $title-gray-words-color;
+
+    &:hover .header-adress-tel-svg {
+      fill: $accent-color;
+    }
+
+    &:hover .header-adress-mail-svg {
+      fill: $accent-color;
+    }
   }
   
