--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -17,15 +17,15 @@
     padding-top: 94px;
   }
   
-  .team-list-item:not(:last-child) {
-    margin-right: 30px;
-  }
-  
   .team-list-item {
     background-color: #ffffff;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 0px 0px 4px 4px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
   
   .team-list-item-img {
@@ -49,6 +49,24 @@
   
     width: 44px;
     height: 44px;
+
+    .link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+    }
+
+    .link:hover {
+      background-color: $accent-color;
+      border-radius: 50%;
+    }
+
+    .link:hover .social-link-list-item-svg {
+      fill: #ffffff;
+    }
   }
   
   .social-link-list-item-svg {
@@ -57,23 +75,7 @@
     fill: #afb1b8;
   }
   
-  .social-link-list-item .link:hover {
-    background-color: $accent-color;
-    border-radius: 50%;
-  }
-  
-  .link:hover .social-link-list-item-svg {
-    fill: #ffffff;
-  }
-  
-  .social-link-list-item .link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-  }
+
   
   .subtitle-team {
     margin-bottom: 10px;
