--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -21,15 +21,22 @@
   
   .addres-wrapper {
     margin-top: 60px;
-  }
-  
-  .addres-wrapper .logo {
-    padding: 0px;
+
+    .logo {
+      padding: 0px;
+    }
   }
   
   .addres-footer-map {
     padding: 0px;
     margin-top: 20px;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: $title-light-words-color;
   }
   
   .list-item-addres-footer {
@@ -41,15 +48,6 @@
     height: 80px;
     margin-top: 72px;
     margin-left: 69px;
-  }
-  
-  .addres-footer-map {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: $title-light-words-color;
   }
   
   .addres-footer-mail,
@@ -98,10 +96,10 @@
     height: 44px;
     border-radius: 50%;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .footer-social-link-link:hover {
-    background-color: $accent-color;
+
+    &:hover {
+      background-color: $accent-color;
+    }
   }
   
   .footer-subscribe-wrapper {
@@ -140,12 +138,12 @@
     background-color: #2F303A;
   }
   
-  .footer-form-subscribe input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-  }
-  
   .footer-form-subscribe input {
     color: rgba(255, 255, 255, 0.6);
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.6);
+      }
   }
   
   .footer-subscribe-btn {
@@ -170,11 +168,8 @@
   }
   
   .footer-subscribe-btn-svg {
+    display: flex;
     width: 24px;
     height: 24px;
     margin-left: 10px;
-  }
-  
-  .footer-subscribe-btn-svg{
-    display: flex;
   }
