--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -40,45 +40,41 @@
     padding-left: 22px;
     padding-right: 22px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
   
-  .button:hover,
-  .button:focus {
+    &:hover,
+    &:focus {
     color: $title-light-words-color;
     background-color: $accent-color;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 3px 1px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    }
   }
+  
+  
   
   /*Портфолио ГАЛЕРЕЯ*/
   .list-portfolio {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 94px;
+
+    li {
+      width: calc((100% - 60px) / 3);
+      height: 404px;
+      margin-right: 30px;
+      margin-bottom: 30px;
+
+      &:nth-child(3n) {
+        margin-right: 0px;
+      }
+
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0px;
+      }
+    }
   }
-  
-  .list-portfolio > li {
-    width: calc((100% - 60px) / 3);
-    height: 404px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
-  
-  /*  width: 370px;
-    height: 404px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
-  */
-  .list-portfolio > li:nth-child(3n) {
-    margin-right: 0px;
-  }
-  
-  .list-portfolio > li:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
-  }
-  
+
   .link-portfolio {
     display: block;
     height: 100%;
@@ -88,10 +84,11 @@
   .list-item-portfolio {
     border: #eeeeee solid 1px;
     box-sizing: border-box;
-  }
-  .list-item-portfolio:hover {
-    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      0px 1px 1px rgba(0, 0, 0, 0.12);
+
+    &:hover {
+      box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        0px 1px 1px rgba(0, 0, 0, 0.12);
+    }
   }
   
   .desc-portfolio {
@@ -106,11 +103,12 @@
     position: relative;
     margin-bottom: 20px;
     overflow: hidden; 
+
+    img {
+      display: block;
+    }
   }
   
-  .wrapper-opacity > img {
-      display: block;
-  }
   
   .desc-portfolio {
     position: absolute;
