--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -146,9 +146,9 @@
   }
   
   .text-portfolio {
+    display: inline;
     width: 322px;
     height: 30px;
-    margin: 0px;
     margin-left: 24px;
   
     font-weight: 400;
