--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/_var";
 @import "./base/base";
-@import "./components/_container";
+@import "./components/container";
 @import "./components/modal";
 @import "./layout/header";
 @import "./layout/hero";
