--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,8 +17,8 @@ ul,
 h1,
 h2,
 h3 {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 
@@ -34,3 +34,4 @@ h3 {
   .list {
     list-style: none;
   }
+  
