--- a/css/main.css
+++ b/css/main.css
@@ -521,12 +521,12 @@ svg {
   height: 294px;
 }
 
-.about-us-list:not(:last-child) {
-  margin-right: 30px;
-}
-
 .about-us-list-item {
   position: relative;
+}
+
+.about-us-list-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .title {
